deploy: 4d5d3eb52624828d856af60d9c4f13e27769a94d

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A personal blog on adventures in astrophotography, sustainability, hiking and the like ." />
+  <meta name="description" content="A personal blog on adventures in astrophotography, sustainability, hiking and the like." />
+  <meta name="author" content="Ash Bladon">
+  <meta name="robots" content="index, follow">
 
+  meta property="og:title" content="Ashterism - Musings by Ash">
+  <meta property="og:description" content="A personal blog on adventures in astrophotography, sustainability, hiking and the like.">
+  <meta property="og:url" content="https://ashterism.com/">
+  <meta property="og:type" content="website">
 
   <!-- Begin SEO --><!-- Begin Jekyll SEO tag v2.8.0 -->
 <title>Ashterism | A collection of thoughts and experiences on Astronomy, Hiking, Sustainability, and the like</title>
